--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -56,7 +56,7 @@
       </div>
 
     <footer>
-        <p><small>Powered by <a href="https://github.com/mojombo/jekyll">Jekyll</a> & <a href="http://pages.github.com">GitHub</a> | Copyright 2012 - {{site.time | date:"%Y"}} by <a href="/about/">webfrogs</a> | <span class="label label-info" id="timeSpan"></span></small></p>
+        <p><small>Powered by <a href="https://github.com/mojombo/jekyll">Jekyll</a> & <a href="http://pages.github.com">GitHub</a> | Copyright 2015 - {{site.time | date:"%Y"}} by <a href="/about/">{{ site.author }}</a> | <span class="label label-info" id="timeSpan"></span></small></p>
     </footer>
 
     </div>
