--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,7 +8,10 @@
     <link rel="shortcut icon" href="/favicon.ico">
     <link href="/feed/" rel="alternate" title="{{ site.author }}" type="application/atom+xml" />
     <link rel="stylesheet" href="/media/css/style.css">
-    <link rel="stylesheet" href="/media/css/highlight.css">
+    <link rel="stylesheet" href="/media/css/pygments/default.css" />
+    <link rel="stylesheet" href="/media/css/pygments/default_inline.css" />
+
+    <!--<link rel="stylesheet" href="/media/css/highlight.css"> -->
     <script type="text/javascript" src="/media/js/jquery-1.7.1.min.js"></script>
     <!-- mathjax config similar to math.stackexchange -->
     <script type="text/x-mathjax-config">
