--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="/media/css/style.css">
     <link rel="stylesheet" href="/media/css/pygments/default.css" />
     <link rel="stylesheet" href="/media/css/pygments/default_inline.css" />
-
+    <link rel="stylesheet" href="/media/css/coderay.css" />
     <!--<link rel="stylesheet" href="/media/css/highlight.css"> -->
     <script type="text/javascript" src="/media/js/jquery-1.7.1.min.js"></script>
     <!-- mathjax config similar to math.stackexchange -->
