--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -57,7 +57,7 @@ Date.prototype.format = function(format) {
             <header>
                 <h1>{{ page.title }}</h1>
             </header>
-            <nav id="real_nav">
+            <nav>
                 <span><a title="home page" class="" href="/">Home</a></span>
                 <span><a title="categories" class="" href="/categories/">Categories</a></span>
                 <span><a title="tags" class="" href="/tags/">Tags</a></span>
