--- a/css/mystyle.css
+++ b/css/mystyle.css
@@ -1,5 +1,5 @@
 body {
-    font-family: Arial,"Times New Roman","Microsoft Yahei", Helvetica, Arial, sans-serif;
+    font-family: "Microsoft Yahei", Helvetica, Arial, sans-serif;
     color: #333;
     line-height: 22px;
     letter-spacing: 1px; /*字间距*/
