--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -11,5 +11,7 @@ layout: default
   <div class="post-content" itemprop="articleBody">
     {{ content }}
   </div>
-
+<div>
+    
+</div>
 </article>
