--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,6 +8,7 @@
         <div class="wrapper">
             {{ content }}
             {% include comment.html %}
+            {% include recommend.html %}
         </div>
     </div>
     {% include footer.html %}
