--- a/_includes/recommend.html
+++ b/_includes/recommend.html
@@ -1,5 +1,5 @@
 <!-- 多说热评文章 start -->
-    <div class="ds-top-threads" data-range="monthly" data-num-items="4"></div>
+    <div class="ds-top-threads" data-range="daily" data-num-items="4"></div>
 <!-- 多说热评文章 end -->
 <!-- 多说公共JS代码 start (一个网页只需插入一次) -->
 <script type="text/javascript">
