--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -10,6 +10,8 @@ layout: default
 
   <div class="post-content" itemprop="articleBody">
     {{ content }}
+    {% include comment.html %}
+    {% include recommend.html %}
   </div>
 <div>
     
