--- a/css/mystyle.css
+++ b/css/mystyle.css
@@ -125,7 +125,7 @@ table th {
 
 table td {
     border-width: 1px;
-    padding: 8px;
+    /*padding: 8px;*/
     border-style: solid;
     border-color: #666666;
     background-color: #ffffff;
