--- a/css/mystyle.css
+++ b/css/mystyle.css
@@ -207,12 +207,13 @@ blockquote ul {
 }
 
 #Mtable {
-    font-family: "Microsoft YaHei UI";
-    font-size: 11px;
-    color: #333333;
     border-width: 0px;
-    border-color: #666666;
-    border-collapse: collapse;
-    text-align: center;
-    margin: 10px auto;
+}
+
+#Mtable th {
+    border-width: 0px;
+}
+
+#Mtable td {
+    border-width: 0px;
 }
