--- a/css/mystyle.css
+++ b/css/mystyle.css
@@ -1,37 +1,45 @@
 /* cyrillic */
+
 @font-face {
-  font-family: 'Cuprum';
-  font-style: normal;
-  font-weight: 400;
-  src: local('Cuprum'), local('Cuprum-Regular'), url(http://fonts.gstatic.com/s/cuprum/v7/gJovVCIsuVHpE7lUT-5TYfesZW2xOQ-xsNqO47m55DA.woff2) format('woff2');
-  unicode-range: U+0400-045F, U+0490-0491, U+04B0-04B1, U+2116;
+    font-family: 'Cuprum';
+    font-style: normal;
+    font-weight: 400;
+    src: local('Cuprum'), local('Cuprum-Regular'), url(http://fonts.gstatic.com/s/cuprum/v7/gJovVCIsuVHpE7lUT-5TYfesZW2xOQ-xsNqO47m55DA.woff2) format('woff2');
+    unicode-range: U+0400-045F, U+0490-0491, U+04B0-04B1, U+2116;
 }
+
+
 /* latin-ext */
+
 @font-face {
-  font-family: 'Cuprum';
-  font-style: normal;
-  font-weight: 400;
-  src: local('Cuprum'), local('Cuprum-Regular'), url(http://fonts.gstatic.com/s/cuprum/v7/TMj3tAAbnWTxQie9wLnZ2fesZW2xOQ-xsNqO47m55DA.woff2) format('woff2');
-  unicode-range: U+0100-024F, U+1E00-1EFF, U+20A0-20AB, U+20AD-20CF, U+2C60-2C7F, U+A720-A7FF;
+    font-family: 'Cuprum';
+    font-style: normal;
+    font-weight: 400;
+    src: local('Cuprum'), local('Cuprum-Regular'), url(http://fonts.gstatic.com/s/cuprum/v7/TMj3tAAbnWTxQie9wLnZ2fesZW2xOQ-xsNqO47m55DA.woff2) format('woff2');
+    unicode-range: U+0100-024F, U+1E00-1EFF, U+20A0-20AB, U+20AD-20CF, U+2C60-2C7F, U+A720-A7FF;
 }
+
+
 /* latin */
+
 @font-face {
-  font-family: 'Cuprum';
-  font-style: normal;
-  font-weight: 400;
-  src: local('Cuprum'), local('Cuprum-Regular'), url(http://fonts.gstatic.com/s/cuprum/v7/rZj40-VH1f1Wt0yg6Fkbcw.woff2) format('woff2');
-  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2212, U+2215, U+E0FF, U+EFFD, U+F000;
+    font-family: 'Cuprum';
+    font-style: normal;
+    font-weight: 400;
+    src: local('Cuprum'), local('Cuprum-Regular'), url(http://fonts.gstatic.com/s/cuprum/v7/rZj40-VH1f1Wt0yg6Fkbcw.woff2) format('woff2');
+    unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2212, U+2215, U+E0FF, U+EFFD, U+F000;
 }
 
 
 /*页面格式*/
+
 body {
-    font-family: "Cuprum","Hiragino Sans GB","Microsoft Yahei", Helvetica, Arial, sans-serif;
+    font-family: "Cuprum", "Hiragino Sans GB", "Microsoft Yahei", Helvetica, Arial, sans-serif;
     color: #333;
     line-height: 22px;
-    letter-spacing: 1px; /*字间距*/
+    letter-spacing: 1px;
+    /*字间距*/
 }
-
 
 p {
     margin: 0px 0px 20px;
@@ -47,7 +55,7 @@ h2 {
     font-size: 24px;
 }
 
-.list-margin{
+.list-margin {
     margin: 15px 0px 10px;
 }
 
@@ -138,7 +146,6 @@ p img {
     margin: auto;
 }
 
-
 hr {
     border-width: 0px 0px 1px;
     color: #cfcfcf;
@@ -151,6 +158,8 @@ hr {
     border-image: none;
     margin: 15px 0px;
 }
+
+
 /*链接*/
 
 a:link {
@@ -200,20 +209,37 @@ blockquote ul {
     margin-left: 0px;
 }
 
-/*Reference格式*/
-.footnotes ol li p{
-    margin: 5px;
 
+/*Reference格式*/
+
+.footnotes ol li p {
+    margin: 5px;
 }
 
 #Mtable {
+    font-family: "Microsoft YaHei UI";
+    font-size: 11px;
+    color: #333333;
     border-width: 0px;
+    border-color: #666666;
+    border-collapse: collapse;
+    text-align: center;
+    margin: 10px auto;
 }
 
 #Mtable th {
-    border-width: 0px;
+    vertical-align: middle;
+    border-width: 1px;
+    padding: 8px;
+    border-style: solid;
+    border-color: #666666;
+    background-color: #dedede;
 }
 
 #Mtable td {
-    border-width: 0px;
+    border-width: 1px;
+    /*padding: 8px;*/
+    border-style: solid;
+    border-color: #666666;
+    background-color: #ffffff;
 }
