--- a/css/mystyle.css
+++ b/css/mystyle.css
@@ -217,14 +217,10 @@ blockquote ul {
 }
 
 #Mtable {
-    font-family: "Microsoft YaHei UI";
-    font-size: 11px;
-    color: #333333;
     border-width: 0px;
-    border-color: #666666;
-    border-collapse: collapse;
-    text-align: center;
-    margin: 10px auto;
 }
 
 
+#Mtable td {
+    border-width: 0px;
+}
