--- a/css/mystyle.css
+++ b/css/mystyle.css
@@ -136,7 +136,7 @@ table td {
     /*padding: 8px;*/
     border-style: solid;
     border-color: #666666;
-    background-color: #fdfdfd;
+    background-color: #ffffff;
 }
 
 p img {
