--- a/_includes/head.html
+++ b/_includes/head.html
@@ -8,12 +8,14 @@
     <link rel="stylesheet" href="{{ " /css/mystyle.css " | prepend: site.baseurl }}">
     <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
     <link rel="alternate" type="application/rss+xml" title="{{ site.title }}" href="{{ " /feed.xml " | prepend: site.baseurl | prepend: site.url }}">
-    <script type="text/x-mathjax-config">
+<!--     <script type="text/x-mathjax-config">
         MathJax.Hub.Config({ tex2jax: {inlineMath: [['$','$'], ['\\(','\\)']]} });
-    </script>
-    <script type="text/x-mathjax-config">
-        MathJax.Hub.Config({ "HTML-CSS": { linebreaks: { automatic: true } }, SVG: { linebreaks: { automatic: true } } });
-    </script>
+    </script> -->
+<script type="text/x-mathjax-config">
+    MathJax.Hub.Config({ tex2jax: { inlineMath: [ ['$', '$'], ['\\(', '\\)'] ], displayMath: [ ['$$', '$$'], ["\\[", "\\]"] ], processEscapes: true }, TeX: { extensions: ["AMSmath.js", "AMSsymbols.js"], equationNumbers: { autoNumber: ["AMS"], useLabelIds: true }, Macros: { hfill: "{}" } }, "HTML-CSS": { linebreaks: { automatic: true }, availableFonts: ["TeX"], scale: 110 }, SVG: { linebreaks: { automatic: true } } });
+</script>
+
+
 
     <script src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
 </head>
