--- a/_includes/head.html
+++ b/_includes/head.html
@@ -12,7 +12,7 @@
         MathJax.Hub.Config({ tex2jax: {inlineMath: [['$','$'], ['\\(','\\)']]} });
     </script> -->
 <script type="text/x-mathjax-config">
-    MathJax.Hub.Config({ tex2jax: { inlineMath: [ ['$', '$'], ['\\(', '\\)'] ], displayMath: [ ['$$', '$$'], ["\\[", "\\]"] ], processEscapes: true }, TeX: { extensions: ["AMSmath.js", "AMSsymbols.js"], equationNumbers: { autoNumber: ["AMS"], useLabelIds: true }, Macros: { hfill: "{}" } }, "HTML-CSS": { linebreaks: { automatic: true }, availableFonts: ["TeX"], scale: 80 }, SVG: { linebreaks: { automatic: true } } });
+    MathJax.Hub.Config({ tex2jax: { inlineMath: [ ['$', '$'], ['\\(', '\\)'] ], displayMath: [ ['$$', '$$'], ["\\[", "\\]"] ], processEscapes: true }, "HTML-CSS": { linebreaks: { automatic: true }, availableFonts: ["TeX"], scale: 80 }});
 </script>
 
 
