--- a/_includes/head.html
+++ b/_includes/head.html
@@ -13,7 +13,7 @@
     </script> -->
 <script type="text/x-mathjax-config">
     MathJax.Hub.Config({ tex2jax: { inlineMath: [ ['$', '$'], ['\\(', '\\)'] ], displayMath: [ ['$$', '$$'], ["\\[", "\\]"] ], processEscapes: true }, "HTML-CSS": { linebreaks: { automatic: true }, availableFonts: ["TeX"], scale: 100 , 
-    styles: { ".MathJax_Display": { "text-align": "center", margin: "0em 0em" },
+    styles: { ".MathJax_Display": { "text-align": "center", max-width:80%},
               ".MathJax .merror": { "background-color": "#FFFF88", color:   "#CC0000", border:  "1px solid #CC0000", padding: "1px 3px", "font-style": "normal", "font-size":  "90%" }}
   }});
 </script>
