--- a/_includes/head.html
+++ b/_includes/head.html
@@ -13,6 +13,9 @@
       }});
     </script>
     <!-- 代码高亮 -->
+    <script type="text/javascript">
+     SyntaxHighlighter.all()
+</script>
     <script type="text/javascript" src="{{ " /media/js/syntaxhighlighter.js" | prepend: site.baseurl }}"></script>
     <script src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
 </head>
