--- a/_includes/head.html
+++ b/_includes/head.html
@@ -14,7 +14,7 @@
     <script src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
     <!-- 代码高亮 -->
     <!-- Include required JS files -->
-    <script type="text/javascript" src="js/shCore.js"></script>
+    <script type="text/javascript" src="{{ " /media/js/shCore.js " | prepend: site.baseurl }}"></script>
 
     <!--
     At least one brush, here we choose JS. You need to include a brush for every 
