--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -12,6 +12,9 @@ layout: default
     {{ content }}
     {% include comment.html %}
   </div>
+  <script type="text/javascript">
+     SyntaxHighlighter.all()
+  </script>
 <div>
     
 </div>
