--- a/_includes/head - 副本.html
+++ b/_includes/head - 副本.html
@@ -14,12 +14,12 @@
     <script src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
     <!-- 代码高亮 -->
     <!-- Include required JS files -->
-    <script type="text/javascript" src="/media/js/shCore.js"></script>
-    <script type="text/javascript" src="/media/js/shBrushPython.js "></script>
-    <script type="text/javascript" src="/media/js/shBrushCpp.js "></script>
+    <script type="text/javascript" src="{{ " /media/js/shCore.js " | prepend: site.baseurl }}"></script>
+    <script type="text/javascript" src="{{ " /media/js/shBrushPython.js " | prepend: site.baseurl }}"></script>
+    <script type="text/javascript" src="{{ " /media/js/shBrushCpp.js " | prepend: site.baseurl }}"></script>
     <!-- Include *at least* the core style and default theme -->
-    <link href="/media/css/shCore.css" rel="stylesheet" type="text/css" />
-    <link href="/media/css/shThemeDefault.css " rel="stylesheet" type="text/css" />
+    <link href="{{ " /media/css/shCore.css " | prepend: site.baseurl }}" rel="stylesheet" type="text/css" />
+    <link href="{{ " /media/css/shThemeDefault.css " | prepend: site.baseurl }}" rel="stylesheet" type="text/css" />
     <script type="text/javascript">
         SyntaxHighlighter.all()
     </script>
