--- a/_includes/head.html
+++ b/_includes/head.html
@@ -13,13 +13,10 @@
     </script>
     <script src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
     <!-- 代码高亮 -->
-    <!-- Include required JS files -->
-    <script type="text/javascript" src="/media/js/shCore.js"></script>
-    <script type="text/javascript" src="/media/js/shBrushPython.js "></script>
-    <script type="text/javascript" src="/media/js/shBrushCpp.js "></script>
-    <!-- Include *at least* the core style and default theme -->
-    <link href="/media/css/shCore.css" rel="stylesheet" type="text/css" />
-    <link href="/media/css/shThemeDefault.css " rel="stylesheet" type="text/css" />
+    <link href="http://alexgorbatchev.com/pub/sh/current/styles/shThemeDefault.css" rel="stylesheet" type="text/css" />
+    <script src="http://alexgorbatchev.com/pub/sh/current/scripts/shCore.js" type="text/javascript"></script>
+    <script src="http://alexgorbatchev.com/pub/sh/current/scripts/shBrushPython.js" type="text/javascript"></script>
+    <link href="http://alexgorbatchev.com/pub/sh/current/styles/shCore.css" rel="stylesheet" type="text/css" />
     <script type="text/javascript">
         SyntaxHighlighter.all()
     </script>
