--- a/_includes/head.html
+++ b/_includes/head.html
@@ -16,7 +16,7 @@
     <link href="http://alexgorbatchev.com/pub/sh/current/styles/shThemeDefault.css" rel="stylesheet" type="text/css" />
     <script src="http://alexgorbatchev.com/pub/sh/current/scripts/shCore.js" type="text/javascript"></script>
     <script src="http://alexgorbatchev.com/pub/sh/current/scripts/shBrushPython.js" type="text/javascript"></script>
-    <link href="http://alexgorbatchev.com/pub/sh/current/styles/shCore.css" rel="stylesheet" type="text/css" />
+    <link href="/media/css/shCore.css" rel="stylesheet" type="text/css" />
     <script type="text/javascript">
         SyntaxHighlighter.all()
     </script>
