--- a/media/css/shCore.css
+++ b/media/css/shCore.css
@@ -44,10 +44,10 @@
   vertical-align: baseline !important;
   width: auto !important;
   box-sizing: content-box !important;
-  /*font-family: "Consolas", "Bitstream Vera Sans Mono", "Courier New", Courier, monospace !important;*/
+  font-family: "Consolas", "Bitstream Vera Sans Mono", "Courier New", Courier, monospace !important;
   font-weight: normal !important;
   font-style: normal !important;
-  font-size: 1em !important;
+  font-size: 14px;
   min-height: inherit !important;
   min-height: auto !important;
 }
@@ -140,6 +140,7 @@
   height: 11px !important;
   font-size: 10px !important;
   z-index: 10 !important;
+  display: none;
 }
 .syntaxhighlighter .toolbar span.title {
   display: inline !important;
