--- a/_includes/head.html
+++ b/_includes/head.html
@@ -12,4 +12,6 @@
         MathJax.Hub.Config({ tex2jax: { inlineMath: [ ['$', '$'], ['\\(', '\\)'] ], displayMath: [ ['$$', '$$'], ["\\[", "\\]"] ], processEscapes: true }, "HTML-CSS": { linebreaks: { automatic: true }, availableFonts: ["TeX"], scale: 100 , }});
     </script>
     <script src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
+    <script src=" /media/js/prettify.js "></script>
+    <link rel="stylesheet" href=" /media/css/prettify.css ">
 </head>
