--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,7 +2,7 @@
 <html>
 {% include head.html %}
 
-<body>
+<body onload="prettyPrint()">
     {% include header.html %}
     <div class="page-content">
         <div class="wrapper">
