--- a/media/css/mystyle.css
+++ b/media/css/mystyle.css
@@ -35,8 +35,8 @@
 
 body {
     font-family: "Cuprum", "Hiragino Sans GB", "Microsoft Yahei", Helvetica, Arial, sans-serif;
-    background: #e6e6e6;
-    color: #111;
+    background: url('/assets/blog/furley-bg.png');
+    color: #333;
     line-height: 22px;
     letter-spacing: 1px;
     /*字间距*/
