--- a/media/css/mystyle.css
+++ b/media/css/mystyle.css
@@ -43,7 +43,7 @@ body {
 }
 
 .subtlepattern_white_wall {
-    background-image: url("/assets/blog/white_wall.png")
+    background-image: url("/assets/blog/concrete_wall.png.png")
 }
 
 p {
