--- a/media/css/mystyle.css
+++ b/media/css/mystyle.css
@@ -113,7 +113,7 @@ table th {
 
 table td {
     border-width: 1px;
-    padding: 4px;
+    /*padding: 8px;*/
     border-style: solid;
     border-color: #666666;
     background-color: #ffffff;
