--- a/media/css/mystyle.css
+++ b/media/css/mystyle.css
@@ -70,7 +70,7 @@ h5,
 h6 {
     /*color: #222;*/
     font-weight: 500;
-    /*font-family: "Microsoft Yahei", "Hiragino Sans GB", "WenQuanYi Micro Hei", sans-serif;*/
+    font-family: "Microsoft Yahei", "Hiragino Sans GB", "WenQuanYi Micro Hei", sans-serif;
 }
 
 
