--- a/media/css/mystyle.css
+++ b/media/css/mystyle.css
@@ -206,7 +206,7 @@ blockquote ul {
 }
 
 .footnotes ol li{
-    font-family: "SimHei","Microsoft Yahei", "Hiragino Sans GB", "WenQuanYi Micro Hei";
+    font-family: "SimHei","Microsoft Yahei",  "WenQuanYi Micro Hei";
     font-weight: 400;
 }
 
