--- a/media/css/mystyle.css
+++ b/media/css/mystyle.css
@@ -5,10 +5,10 @@
     src: url('/media/font/Cuprum-Regular.ttf') format('truetype');
 }
 
-@font-face {
+/*@font-face {
     font-family: 'WenQuanYi-Micro-Hei';
     src: url('/media/font/WenQuanYi-Micro-Hei.ttf') format('truetype');
-}
+}*/
 
 /*页面格式*/
 
