--- a/media/css/prettify - 副本.css
+++ b/media/css/prettify - 副本.css
@@ -75,7 +75,7 @@
 pre.prettyprint {
     background-color: #F7F7F9;
     padding: 10px;
-    /*border: 1px solid #E1E1E8;*/
+    border: 1px solid #E1E1E8;
     width: 95%;
     margin: 0px auto 10px;
     font-family: "Consolas", "Bitstream Vera Sans Mono", "Courier New", Courier, monospace !important;
@@ -92,21 +92,15 @@ pre.prettyprint {
 
 /* Specify class=linenums on a pre to get line numbering */
 
-pre.prettyprint ol li {
-    margin-left: 18px;
-    padding-left: 18px;
-    border-left: 3px solid #6CE26C;
-}
-
-
 ol.linenums {
     color: #1E347B;
-    margin: 0 0 0 20px;
+    margin: 0 0 0 40px;
 }
 
 ol.linenums li {
     color: #BEBEC5;
     line-height: 20px;
+    padding-left: 12px;
     text-shadow: 0 1px 0 #FFFFFF;
 }
 
@@ -124,11 +118,10 @@ li.L8 {
 
 /* Alternate shading for lines */
 
-/*li.L1,
+li.L1,
 li.L3,
 li.L5,
 li.L7,
 li.L9 {
     background: #eee;
 }
-*/
