--- a/media/css/mystyle.css
+++ b/media/css/mystyle.css
@@ -14,8 +14,7 @@
 
 body {
     font-family: "Cuprum", "Hiragino Sans GB", "Microsoft Yahei","WenQuanYi Zen Hei", Helvetica, Arial, sans-serif;
-    /*background-color: #fdfdfd;*/
-    background: #FBFCFB;
+    background-color: #fdfdfd;
     color: #333;
     line-height: 22px;
     letter-spacing: 1px;
