--- a/media/css/main.css
+++ b/media/css/main.css
@@ -55,10 +55,10 @@ h1, h2, h3, h4, h5, h6 {
  * Links
  */
 a {
-  color: #2a7ae2;
+  color: #1756a9;
   text-decoration: none; }
-  a:visited {
-    color: #1756a9; }
+/*  a:visited {
+    color: #1756a9; }*/
   a:hover {
     color: #111;
     text-decoration: underline; }
