--- a/media/css/main.css
+++ b/media/css/main.css
@@ -293,8 +293,8 @@ pre {
     @media screen and (max-width: 800px) {
       .post-content h2 {
         font-size: 28px; } }
-  .post-content h3 {
-    font-size: 26px; }
+/*  .post-content h3 {
+    font-size: 26px; }*/
     @media screen and (max-width: 800px) {
       .post-content h3 {
         font-size: 22px; } }
