--- a/_includes/head.html
+++ b/_includes/head.html
@@ -13,5 +13,6 @@
     </script>
     <script src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
     <script src=" /media/js/prettify.js "></script>
+    <script src="http://libs.baidu.com/jquery/1.9.0/jquery.min.js"></script>
     <link rel="stylesheet" href=" /media/css/prettify.css ">
 </head>
