--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,7 +2,7 @@
 <html>
 {% include head.html %}
 
-<body onload="prettyPrint()">
+<body>
     {% include header.html %}
     <div class="page-content">
         <div class="wrapper">
@@ -10,6 +10,13 @@
         </div>
     </div>
     {% include footer.html %}
+    <script type="text/javascript">
+        $(window).load(function(){
+          $("pre").removeClass("highlight prettyprinted");
+          $("pre").addClass("prettyprint linenums");//如果其他地方也要用到pre，我们可以再加一个父标签的选择器来区分
+          prettyPrint();//代替body上的onload事件加载该方法
+        })
+    </script>
 </body>
 
 </script>
