--- a/media/css/mystyle.css
+++ b/media/css/mystyle.css
@@ -13,7 +13,7 @@
 /*页面格式*/
 
 body {
-    font-family: "Cuprum", "Hiragino Sans GB", "Microsoft Yahei","WenQuanYi Zen Hei", Helvetica, Arial, sans-serif;
+    font-family: "Cuprum", "Microsoft Yahei","WenQuanYi Zen Hei", Helvetica, Arial, sans-serif;
     background-color: #fdfdfd;
     color: #333;
     line-height: 22px;
