--- a/_includes/head.html
+++ b/_includes/head.html
@@ -14,5 +14,8 @@
     <script src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
     <script src=" /media/js/prettify.js "></script>
     <script src="http://libs.baidu.com/jquery/1.9.0/jquery.min.js"></script>
-    <link rel="stylesheet" href=" /media/css/prettify.css ">
+    <!-- <link rel="stylesheet" href=" /media/css/prettify.css "> -->
+    <link rel="stylesheet" href="/path/to/styles/default.css">
+    <script src="/path/to/highlight.pack.js"></script>
+    <script>hljs.initHighlightingOnLoad();</script>
 </head>
