--- a/_includes/head.html
+++ b/_includes/head.html
@@ -16,6 +16,6 @@
     <script src="http://libs.baidu.com/jquery/1.9.0/jquery.min.js"></script>
     <!-- <link rel="stylesheet" href=" /media/css/prettify.css "> -->
     <link rel="stylesheet" href="/path/to/styles/default.css">
-    <script src=" /media/css/highlight.pack.js"></script>
+    <script src=" /media/js/highlight.pack.js"></script>
     <script>hljs.initHighlightingOnLoad();</script>
 </head>
