--- a/_includes/head.html
+++ b/_includes/head.html
@@ -12,7 +12,7 @@
         MathJax.Hub.Config({ tex2jax: { inlineMath: [ ['$', '$'], ['\\(', '\\)'] ], displayMath: [ ['$$', '$$'], ["\\[", "\\]"] ], processEscapes: true }, "HTML-CSS": { linebreaks: { automatic: true }, availableFonts: ["TeX"], scale: 100 }});
     </script>
     <script src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
-    <script src=" /media/js/prettify.js "></script>
+    <!-- <script src=" /media/js/prettify.js "></script> -->
     <script src="http://libs.baidu.com/jquery/1.9.0/jquery.min.js"></script>
     <!-- <link rel="stylesheet" href=" /media/css/prettify.css "> -->
     <link rel="stylesheet" href="/path/to/styles/default.css">
