--- a/_includes/head.html
+++ b/_includes/head.html
@@ -14,8 +14,7 @@
     <script src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
     <!-- <script src=" /media/js/prettify.js "></script> -->
     <script src="http://libs.baidu.com/jquery/1.9.0/jquery.min.js"></script>
-    <!-- <link rel="stylesheet" href=" /media/css/prettify.css "> -->
-    <link rel="stylesheet" href="/path/to/styles/default.css">
+    <link rel="stylesheet" href=" /media/css/googlecode.css ">
     <script src=" /media/js/highlight.pack.js"></script>
     <script>hljs.initHighlightingOnLoad();</script>
 </head>
