--- a/_includes/head.html
+++ b/_includes/head.html
@@ -12,11 +12,12 @@
         MathJax.Hub.Config({ tex2jax: { inlineMath: [ ['$', '$'], ['\\(', '\\)'] ], displayMath: [ ['$$', '$$'], ["\\[", "\\]"] ], processEscapes: true }, "HTML-CSS": { linebreaks: { automatic: true }, availableFonts: ["TeX"], scale: 100 }});
     </script>
     <script src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
-    <!-- <script src=" /media/js/prettify.js "></script> -->
+    <script src=" /media/js/highlight.pack.js"></script>
     <script src="http://libs.baidu.com/jquery/1.9.0/jquery.min.js"></script>
     <link rel="stylesheet" href="http://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.1.0/styles/default.min.css">
-    <script src="http://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.1.0/highlight.min.js"></script>
+    <!-- <script src="http://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.1.0/highlight.min.js"></script> -->
     <script type="text/javascript">
         hljs.initHighlightingOnLoad();
     </script>
 </head>
+<!--  -->
