--- a/media/css/mystyle.css
+++ b/media/css/mystyle.css
@@ -174,7 +174,7 @@ blockquote {
     border-left-style: solid;
     font-size: 100%;
     width: 95%;
-    margin: 0px auto 20px;
+    margin: 0px 0px 20px;
     font-style: normal;
 }
 
