--- a/media/css/mystyle.css
+++ b/media/css/mystyle.css
@@ -174,7 +174,7 @@ blockquote {
     border-left-style: solid;
     font-size: 100%;
     width: 100%;
-    margin: 0px 0px 20px;
+    margin: 0px 40px 20px 0px;
     font-style: normal;
 }
 
