--- a/media/css/mystyle.css
+++ b/media/css/mystyle.css
@@ -173,8 +173,8 @@ blockquote {
     padding: 10px 5px;
     border-left-style: solid;
     font-size: 100%;
-    width: 100%;
-    margin: 0px 40px 20px 0px;
+    width: 98%;
+    margin: 0px 0px 20px;
     font-style: normal;
 }
 
