--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -13,6 +13,8 @@ layout: default
     {% include comment.html %}
   </div>
 <div>
-    
+<div id="backtop">
+   <a href="#">TOP</a>
+</div> 
 </div>
 </article>
