--- a/media/css/mystyle.css
+++ b/media/css/mystyle.css
@@ -13,7 +13,7 @@
 /*页面格式*/
 
 body {
-    /*font-family: "Cuprum", "Microsoft Yahei","WenQuanYi Zen Hei UI", Helvetica, Arial, sans-serif;*/
+    font-family: "Cuprum", "Microsoft Yahei","WenQuanYi Zen Hei UI", Helvetica, Arial, sans-serif;
     /*font-family: "Helvetica Neue", "Helvetica", "Microsoft YaHei UI", "WenQuanYi Micro Hei", Arial, sans-serif;*/
     background-color: #fdfdfd;
     color: #333;
